--- a/index.html
+++ b/index.html
@@ -196,7 +196,12 @@
                         <li class="slide-item"> <a href="#"><img src="images/universities/19.png" alt></a> </li>
 
                     </ul>
+                
                 </div>
+                <div class="btm-box pt-4 text-center" style="margin-bottom: 2rem;">
+                            <a href="meet-us.php" class="theme-btn btn-style-one"><span class="btn-title">Contact Us</span></a>
+                        </div>
+                
             </div>
         </section>
 
@@ -1393,8 +1398,14 @@
                     </div>
                 </div>
             </div>
+            <div class="btm-box pt-4 text-center" >
+                            <a href="meet-us.php" class="theme-btn btn-style-one"><span class="btn-title">Contact Us</span></a>
+                        </div>
         </section>
         <!-- End Process Section -->
+
+
+
         <!-- Training Section -->
         <section class="training-section" id="why-choose-us">
             <div class="bg bg-pattern-2"></div>
@@ -1555,6 +1566,9 @@
                     </div>
                 </div>
             </div>
+            <div class="btm-box pt-4 text-center" style="margin-top: 2rem;">
+                            <a href="meet-us.php" class="theme-btn btn-style-one"><span class="btn-title">Contact Us</span></a>
+                        </div>
         </section>
         <!-- End Testimonial Section -->
 
@@ -1638,6 +1652,10 @@
                     </div>
                 </div>
             </div>
+
+            <div class="btm-box pt-4 text-center" style="margin-bottom: 2rem;">
+                            <a href="meet-us.php" class="theme-btn btn-style-one"><span class="btn-title">Contact Us</span></a>
+                        </div>
         </section>
 
         </div>
