--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
     <!-- Font Awesome Free CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" />
     <style>
+      /* Person icon avatar for testimonials */
+      .testimonial-section .info-box .thumb { width:56px; height:56px; border-radius:50%; display:flex; align-items:center; justify-content:center; background:#f0f2f5; overflow:hidden; }
+      .testimonial-section .info-box .thumb i { font-size:32px; color:#5f5fb3; line-height:1; }
+      @media (max-width: 575.98px) {
+        .testimonial-section .info-box .thumb { width:48px; height:48px; }
+        .testimonial-section .info-box .thumb i { font-size:26px; }
+      }
+    </style>
+    <style>
       /* Static testimonials grid (non-scrolling, exactly 3 items) */
       .testimonial-section .testimonial-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 24px; }
       @media (max-width: 991.98px) { .testimonial-section .testimonial-grid { grid-template-columns: repeat(2, 1fr); } }
@@ -1555,13 +1564,12 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
                                     <span class="icon fa fa-quote-left"></span>
                                     <div class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div>
                                     <div class="text">
-                                        Choosing Study in Dubai was a game-changer! Their meticulous guidance and unwavering support made my transition to Dubai seamless. From visa assistance to cultural integration, they were there every step of the way. Thanks to them, I'm thriving in a vibrant
-                                        academic environment
+                                        It was a great pleasure to meet Sanz international team. Always it will be a great response from Madiha mam,Nadheem sir and Safina mam. Mine and my husband dream has come true as we applied for a visa same time and got the visa at the same time through a guidance of Naadheem sir.
                                     </div>
                                 </div>
                                 <div class="info-box">
-                                    <figure class="thumb"><img src="images/resource/testi-thumb-2.jpg" alt></figure>
-                                    <h6 class="name">Thomas</h6>
+                                    <figure class="thumb"><i class="fa fa-user"></i></figure>
+                                    <h6 class="name">Mamatha N</h6>
                                     <span class="designation"></span>
                                 </div>
                             </div>
@@ -1574,12 +1582,29 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
                                     <span class="icon fa fa-quote-left"></span>
                                     <div class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div>
                                     <div class="text">
-                                        Study in Dubai exceeded my expectations! Their team's expertise and personalized approach made all the difference. They didnâ€™t just assist with my paperwork; they helped me feel at home even before I landed in Dubai. Their commitment to students is commendable
-                                    </div>
+                                I had an excellent experience with Sanz International. They provided professional and trustworthy services, guiding me through the university and visa application process. The team was friendly, supportive, and went the extra mile to help me achieve my dream of studying abroad. Really appreciate it, thanks a lot!!</div>
                                 </div>
                                 <div class="info-box">
-                                    <figure class="thumb"><img src="images/resource/testi-thumb-2.jpg" alt></figure>
-                                    <h6 class="name">Ahmed</h6>
+                                    <figure class="thumb"><i class="fa fa-user"></i></figure>
+                                    <h6 class="name">Abdul Rehman Ansaf</h6>
+                                    <span class="designation"></span>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!-- Testimonial Block -->
+                        <div class="testimonial-block">
+                            <div class="inner-box">
+                                <div class="content-box">
+                                    <span class="icon fa fa-quote-left"></span>
+                                    <div class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div>
+                                    <div class="text">
+The entire service of sanz international has been extremely helpful to me since day 1. Madhiha has been my personal point of contact and she has been extremely supportive and efficient in the process. An excellent consultancy , very initiating and professional. Would definitely recommend this !!                                    </div>
+                                </div>
+                                <div class="info-box">
+                                    <figure class="thumb"><i class="fa fa-user"></i></figure>
+                                    <h6 class="name">Pramiti Sreesha</h6>
                                     <span class="designation"></span>
                                 </div>
                             </div>
