--- a/index.html
+++ b/index.html
@@ -1729,7 +1729,7 @@ The entire service of sanz international has been extremely helpful to me since 
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content card-style shadow-lg border-0 overflow-hidden">
           <div class="modal-body flex-grow-1">
-            <div class="modal-header text-white rounded-top-4" style="background: linear-gradient(135deg, #3e40bf, #696cc7);">
+            <div class="modal-header text-white rounded-top-4" style="background: linear-gradient(135deg, #299e50, #28d863);">
               <h5 class="modal-title text-white fw-bold" id="detailsModalLabel" style="font-family: 'Chunk Five', serif; font-size: 25px;">
                 Please Share Your Details
               </h5>
