--- a/index.html
+++ b/index.html
@@ -118,29 +118,13 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
 							Rate</span></div>
                             <h1 class="title animate-1">Elevate <br>Your Future<br> in Dubai!</h1>
                             <div class="btn-box animate-3">
-                                <a class="theme-btn btn-style-one" onclick="openModel()"><span class="btn-title">Enroll Now</span></a>                                
+                                <a class="theme-btn btn-style-one" onclick="openModel()"><span class="btn-title">Enrol Now</span></a>                                
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Slide Item -->
-                <div class="slide-item">
-                    <div class="bg-image" style="background-image: url(images/main-slider/slider5.png);"></div>
-                    <div class="auto-container">
-                        <div class="content-box">
-                            <div class="sub-title animate-2"><span class="txt"> 100% Success
-							Rate</span></div>
-                            <h1 class="title animate-1">Your <br>Gateway to <br>Excellence</h1>
-                            <div class="btn-box animate-3">
-                                <a class="theme-btn btn-style-one" onclick="openModel()"><span class="btn-title">Know
-								More</span></a>
-                                <a class="theme-btn btn-style-two" onclick="openModel()"><span class="btn-title">Contact
-								Now</span></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </section>
         <!-- End Banner Section -->
@@ -475,7 +459,7 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
                         data-wow-delay="900ms" style="visibility: visible; animation-delay: 900ms; animation-name: fadeInUp;">
                         
                         <div class="btm-box pt-4 text-center">
-                            <a class="theme-btn btn-style-one" onclick="openModel()"><span class="btn-title">Enroll Now</span></a>
+                            <a class="theme-btn btn-style-one" onclick="openModel()"><span class="btn-title">Enrol Now</span></a>
                         </div>
                     </div>
 
@@ -495,7 +479,7 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
                                 <div class="">
                                     <span class="sub-title"></span>
                                     <h2>Courses & <span class="color3">Universities</span></h2>
-                                    <div class="text font-weight-800">Top Courses for Indian Students to Enroll in in
+                                    <div class="text font-weight-800">Top Courses for Indian Students to Enrol in in
                                         Dubai
                                     </div>
                                     <div class="text">The colleges in Dubai, as previously stated, provide well-liked
@@ -1437,7 +1421,7 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
                 </div>
             </div>
             <div class="btm-box pt-4 text-center" >
-                            <a class="theme-btn btn-style-one" onclick="openModel()"><span class="btn-title">Enroll Now</span></a>
+                            <a class="theme-btn btn-style-one" onclick="openModel()"><span class="btn-title">Enrol Now</span></a>
                         </div>
         </section>
         <!-- End Process Section -->
@@ -1705,7 +1689,7 @@ The entire service of sanz international has been extremely helpful to me since 
             </div>
 
             <div class="btm-box pt-4 text-center" style="margin-bottom: 2rem;">
-                            <a class="theme-btn btn-style-one" onclick="openModel()"><span class="btn-title">Enroll Now</span></a>
+                            <a class="theme-btn btn-style-one" onclick="openModel()"><span class="btn-title">Enrol Now</span></a>
                         </div>
         </section>
 
@@ -1717,9 +1701,7 @@ The entire service of sanz international has been extremely helpful to me since 
 
 
 
-        <div class="call">
-            <a href="tel:6364634445" target="_blank"><img src="images/call.png" class="" style="width:60px;" alt=""></a>
-        </div>
+     
 
 
 
