--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       }
     </style>
     <style>
+      /* Scholarships section mobile fixes */
+      .wrap-table100 { overflow-x: visible; }
+      .wrap-table100 table { width: 100%; }
+    </style>
+    <style>
       /* Static testimonials grid (non-scrolling, exactly 3 items) */
       .testimonial-section .testimonial-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 24px; }
       @media (max-width: 991.98px) { .testimonial-section .testimonial-grid { grid-template-columns: repeat(2, 1fr); } }
@@ -1283,8 +1288,8 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
                                 </div>
                                 <h4 class="mt-5 text-center">Popular Master's Scholarships to Study in Dubai for Indian
                                     Students:</h4>
-                                <div class="row mt-4">
-                                    <div class="col-lg-6">
+                                    <div class="row mt-4">
+                                        <div class="col-lg-6 col-md-6 col-sm-12">
                                         <ul class="list-style-two">
                                             <li><i class="fa fa-check-circle"></i>Sheikh Mohammed bin Rashid Al Maktoum
                                                 Foundation Scholarships</li>
@@ -1296,7 +1301,7 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
 
                                         </ul>
                                     </div>
-                                    <div class="col-lg-6">
+                                        <div class="col-lg-6 col-md-6 col-sm-12">
                                         <ul class="list-style-two">
                                             <li><i class="fa fa-check-circle"></i>Khalifa University Master's Scholarships</li>
                                             <li><i class="fa fa-check-circle"></i>Heriot-Watt University Dubai Scholarships</li>
@@ -1312,8 +1317,8 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
                                 </p>
 
                                 <h4 class="mt-5 text-center">Popular MBA Scholarships to Study in Dubai for Indian Students:</h4>
-                                <div class="row mt-4">
-                                    <div class="col-lg-6">
+                                    <div class="row mt-4">
+                                        <div class="col-lg-6 col-md-6 col-sm-12">
                                         <ul class="list-style-two">
                                             <li><i class="fa fa-check-circle"></i>Outstanding Academic Excellence Scholarships</li> 
                                             <li><i class="fa fa-check-circle"></i>Academic Merit Scholarship</li> 
@@ -1322,7 +1327,7 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
                                             <li><i class="fa fa-check-circle"></i>Hult International Business School Scholarship</li> 
                                         </ul>
                                     </div>
-                                    <div class="col-lg-6">
+                                        <div class="col-lg-6 col-md-6 col-sm-12">
                                         <ul class="list-style-two">
                                             <li><i class="fa fa-check-circle"></i>SP Jain School of Global Management Scholarship</li> 
                                             <li><i class="fa fa-check-circle"></i>Murdoch University Dubai Scholarships</li> 
