--- a/thankyou.html
+++ b/thankyou.html
@@ -67,34 +67,22 @@
       padding: 0;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
       min-height: 100vh;
       background-color: #f4f4f4;
     }
 
     h1 {
-      margin-top: 60px;
+      margin-top: 0;
     }
 
     p {
-      max-width: 600px;
-      margin: 20px;
+      max-width: 600px;   
       line-height: 1.6;
     }
 
-    iframe {
-      margin-top: 20px;
-      max-width: 100%;
-      border: none;
-    }
 
-    .footer {
-      margin-top: auto;
-      padding: 20px;
-      font-size: 14px;
-    }
-   
 
   </style>
 
@@ -139,8 +127,8 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
 </head>
 <body>
   <h1>Thank you for submitting your lead.</h1>
-  <p>Our team will connect with you shortly.</p>
+  <p>Our team will connect with you shortly.</br>
+ Feel free to explore our <a href="https://studyindubai.net/">Website</a>.</p>
 
-  </div>
 </body>
 </html>
