--- a/index.html
+++ b/index.html
@@ -115,14 +115,19 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
             <div class="banner-carousel owl-carousel owl-theme">
                 <!-- Slide Item -->
                 <div class="slide-item">
-                    <div class="bg-image" style="background-image: url(images/main-slider/slider4.png);"></div>
+                    <div class="bg-image" style="background-image: url(images/main-slider/banner_imgg.jpg);"></div>
                     <div class="auto-container">
                         <div class="content-box">
-                            <div class="sub-title animate-2"><span class="txt"> 100% Success
-							Rate</span></div>
-                            <h1 class="title animate-1">Elevate <br>Your Future<br> in Dubai!</h1>
+                            <!-- <div class="sub-title animate-2"><span class="txt"> 100% Success Rate</span></div> -->
+                            <h1 class="title animate-1">January Intake <br>for Master's Programs<br>In Top Dubai Universities </h1>
+                            <div class="banner-points animate-2">
+                                <ul style="list-style:none;padding-left:0;margin:12px 0 18px 0;">
+                                    <li>- Guaranteed Admission With Scholarship</li>
+                                    <li>- Offer Letter Within 24-48 hours</li>
+                                </ul>
+                            </div>
                             <div class="btn-box animate-3">
-                                <a class="theme-btn btn-style-one" onclick="openModel()"><span class="btn-title">Enrol Now</span></a>                                
+                                <a class="theme-btn btn-style-one" onclick="openModel()"><span class="btn-title">Apply Now</span></a>                                
                             </div>
                         </div>
                     </div>
