--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@ src="https://www.facebook.com/tr?id=1717930452248902&ev=PageView&noscript=1"
                     <div class="auto-container">
                         <div class="content-box">
                             <!-- <div class="sub-title animate-2"><span class="txt"> 100% Success Rate</span></div> -->
-                            <h1 class="title animate-1">January Intake <br>for Master's Programs<br>In Top Dubai Universities </h1>
+                            <h1 class="title animate-1">January Intake <br>for Master's Programs<br>In Top Dubai Universities</h1>
                             <div class="banner-points animate-2">
-                                <ul style="list-style:none;padding-left:0;margin:12px 0 18px 0;">
+                                <ul style="list-style:none;padding-left:0;margin:12px 0 18px 0;font-size: 114%;">
                                     <li>- Guaranteed Admission With Scholarship</li>
                                     <li>- Offer Letter Within 24-48 hours</li>
                                 </ul>
